# UnderWaterVehicle

./: .gitignore  LICENSE  README.md
bluerov2_gz/docker/: run.sh
bluerov2_gz/models/bluerov2_heavy/: model.sdf
bluerov2_gz/ros2_ws/src/gazebo_launch/: CMakeLists.txt  package.xml
bluerov2_gz/ros2_ws/src/gazebo_launch/scripts/: gazebo_launch.py
bluerov2_gz/ros2_ws/src/gazebo_launch/src/: ros2_.cpp
bluerov2_gz/worlds/: bluerov2_heavy_underwater.world
docker/: Dockerfile_ardupilot_bluerov2  Dockerfile_ros2_humble_x86_no_gpu_dev_mavros  build.bash  general.env  rtps_udp_profile.xml  run.bash  uuv-dev.yaml
docker/ardusub/: .~lock.uuv-dev.yaml#  Dockerfile_ardupilot_bluerov2  apm.launch  build.bash  general.env  run.bash  uuv-dev.yaml
docker/ardusub/px4/: Dockerfile_px4_uuv_simulator  run_px4_uuv.bash
docker/bluerov2_gz/: .~lock.build.bash#  Dockerfile_bluerov2_gz  build.bash  run.bash
docker/qground/: Dockerfile_qground_bluerov2  build.bash  general.env  run.bash
mavros_ws/src/mavroscontrol/: control_script.py
ws/src/bluerov2/: CMakeLists.txt  package.xml
ws/src/bluerov2/include/bluerov2/: ArmServiceClient.hpp
ws/src/bluerov2/launch/: autonomous_launch.py
ws/src/bluerov2/src/: .cpp  ArmServiceClient.cpp  main.cpp
ws/src/bluerov2_gz/: CMakeLists.txt
ws/src/bluerov2_gz/launch/: gazebo_launch.py
ws/src/bluerov2_gz/models/bluerov2_heavy/: model.sdf
ws/src/commander/: CMakeLists.txt
ws/src/commander/scripts/: arm_and_guide.py  head_out.py
ws/src/commander/src/: ros2_manager.cpp
ws/src/control/: CMakeLists.txt  package.xml  setup.py
ws/src/control/control/: arm.py  arm2.py  arm3.py  autonomous_rov_client.py  autonomous_rov_server.py
ws/src/control_as/: CMakeLists.txt  README.md  package.xml
ws/src/control_as/launch/: uuv.launch.py
ws/src/control_as/scripts/: action_client_base.py  as_idle.py  autonomous_controller.py  autonomous_rov_client.py  autonomous_rov_controller.py  c_easy_client.py  c_log_manager.py  example_trigger_client.py  image_stitching.py  move_to_action_client.py  move_to_action_server.py  positions.json  stitching_B.py  test.py  tf_utils.py
ws/src/mavros/mavros/launch/: apm.launch
ws/src/my_arm_service/: package.xml  setup.cfg  setup.py
ws/src/my_arm_service/my_arm_service/: arm_client.py  move_client.py
ws/src/py_pubsub/: package.xml  setup.py
ws/src/py_srvcli/: package.xml  setup.py
ws/src/rlab_customized_ros_msg/: CMakeLists.txt  LICENSE  README.md  package.xml
ws/src/rlab_customized_ros_msg/action/: BarCode.action  CrossRamp.action  HardwareCheck.action  Idle.action  Localization.action  MoveTo.action  MoveToPose.action  PreContact.action  SCLock.action  SnailPattern.action  VLocalization.action  WallDocking.action  WallUndocking.action
ws/src/rlab_customized_ros_msg/msg/: MurataDiag.msg  RlabExample.msg  VoltaDiagnostic.msg  WiferionStatus.msg
ws/src/rlab_customized_ros_msg/srv/: ConvertENU.srv
ws/src/util_AS/: CMakeLists.txt  LICENSE  README.md  package.xml
ws/src/util_AS/scripts/: as_move.py  example_trigger_client.py
ws/src/uuv/bluerov2_slide_controller/: CMakeLists.txt  LICENSE  README.md  package.xml
ws/src/uuv/bluerov2_slide_controller/include/bluerov2_slide_controller/: bluerov2_slide_controller.h
ws/src/uuv/bluerov2_slide_controller/src/: bluerov2_slide_controller.cpp  main.cpp
ws/src/uuv/global_planner/: CMakeLists.txt  package.xml
ws/src/uuv/global_planner/include/global_planner/: a_star_on_graph.h  global_planner.h
ws/src/uuv/global_planner/script/: example_client.py
ws/src/uuv/global_planner/src/: a_star_on_graph.cpp  global_planner.cpp  global_planner_node.cpp
ws/src/uuv/local_planner/base_trajectory/src/: trajectory.cpp
ws/src/uuv/local_planner/local_planner/: CMakeLists.txt  package.xml
ws/src/uuv/local_planner/local_planner/src/: local_planner.cpp  local_planner_node.cpp  local_planner_play_ground_node.cpp
ws/src/uuv/local_planner/mpc_critics/: CMakeLists.txt  mpc_critics.xml
ws/src/uuv/local_planner/mpc_critics/models/: collision_min_max_model.cpp  collision_model.cpp  pure_pursuit_model.cpp  shortest_angle_model.cpp  stick_path_model.cpp  toward_global_plan_model.cpp  y_shift_model.cpp
ws/src/uuv/local_planner/mpc_critics/src/: mpc_critics_node.cpp  mpc_critics_ros.cpp  scoring_model.cpp  stacked_scoring_model.cpp
ws/src/uuv/local_planner/recovery_behaviors/: CMakeLists.txt  package.xml
ws/src/uuv/local_planner/recovery_behaviors/behaviors/: rotate_inplace_behavior.cpp
ws/src/uuv/local_planner/recovery_behaviors/script/: example_client.py
ws/src/uuv/mavros_local_odom_tf/: CMakeLists.txt  README.md  package.xml
ws/src/uuv/mavros_local_odom_tf/launch/: enu_transform.launch
ws/src/uuv/mavros_local_odom_tf/scripts/: enu_tf_verify.py
ws/src/uuv/mavros_local_odom_tf/src/: local_odom2tf.cpp
ws/src/uuv/p2p_move_base/: CMakeLists.txt  package.xml
ws/src/uuv/p2p_move_base/config/: p2p_move_base.yaml
ws/src/uuv/p2p_move_base/launch/: p2p_move_base.launch
ws/src/uuv/p2p_move_base/rviz/: p2p_move_base.rviz
ws/src/uuv/p2p_move_base/script/: clicked2goal.py
ws/src/uuv/p2p_move_base/src/: p2p_fsm.cpp  p2p_move_base.cpp  p2p_move_base_node.cpp
ws/src/uuv/perception_3d/: CMakeLists.txt  perception_3d_plugins.xml
ws/src/uuv/perception_3d/plugins/: nothing_layer.cpp
ws/src/uuv/perception_3d/src/: perception_3d_node.cpp  perception_3d_ros.cpp  sensor.cpp  shared_data.cpp  stacked_perception.cpp
ws/src/uuv/rlab_fixposition_utils/: CMakeLists.txt  package.xml
ws/src/uuv/rlab_fixposition_utils/data/: waypoints.csv  waypoints_new.csv  waypoints_new2.csv
ws/src/uuv/rlab_fixposition_utils/scripts/: fp_ecef_plot.py
ws/src/uuv/rlab_fixposition_utils/src/: cmd2tf_map2baselink.cpp  enu_transform.cpp
ws/src/uuv/uuv_sys_core/: CMakeLists.txt  README.md  package.xml
ws/src/uuv/uuv_sys_core/src/: uuv_enum_states.cpp
ws/src/uuv_commander/: CMakeLists.txt  package.xml
ws/src/uuv_commander/launch/: ugv_commander_launch.py
ws/src/uuv_commander/scripts/: uuv_commander.py
xclone/: clone UUV repository  (x).txt  clone UUV repository .txt
(+53 files in other folders)
